Changes in top level CVS tree (please add your changes at the very top of
the file):

Add Xaw to start of libraries when linking crossedit - fixes focus problem.
File affected configure.in - msw

Fixed a bug in the "depletion on death" code.  The depletion
never had any stat removal specified.  --PeterM

Remove berzerk code/variable from player structure.  The code had
no effect - whatever functionality it once had has been removed in the
past. - msw


Add flag save information for FLAG_CLIENT_SENT that was otherwise
missing (loader.l).  This fixes the disappearing archetype bug - msw


Fixed buffering bug in lowlevel.c
  --David

------------------------------------------------------------------------------
Changes from Crossfire 0.95.2 to 0.95.3:

Fixed missing god animations in the archetypes.

SIMPLE_EXP option added.  From config.h:
 * Define this if you want to use the new (0.95.3) experience system.
 * The system has the following changes:
 *
 * 1) 2000 exp need for second level.  All additional levels are shifted
 *  accordingly.
 * 2) Your stats in your skill categories don't affect the amount of
 *  exp you get.
 * 3) Your level difference doesn't affect the exp you get for killing
 *  monsters.
 *
 * If this commented out, you get the old system.
 *
 * This can also be set by using -simple-exp/+simple-exp as a run
 * time option.


Change treasure lists so that stat improving potions won't show up in
shop.  They should still show up on the ramdom_potion spaces on the
maps (may in fact be slightly more common there than before)

Move socket related code out of server directory and into socket directory
and re-arrange cod so that what is in what file makes more sense.

Code from Peter Mardahl to have death result in stat depletion and
not actual stat loss.  Setable by via STAT_LOSS_ON_DEATH option in config.h
or -stat_loss_on_death/+stat_loss_on_death command line
options.

Patch by Peter Mardahl to change immunity spells from PATH_PROT to PATH_NULL